# qilin

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
abi/: 1inch_v4_agg_rounter.json  erc20.json  sushi_lp_pool.json  uniswap_pool.json  uniswap_universal_router.json  uniswap_v2_lp_pool.json  uniswap_v2_rounter.json  uniswap_v2_router_1.json  uniswap_v3_factory.json  uniswap_v3_quoter.json  uniswap_v3_router.json  uniswap_v3_router_2.json  uniswap_v3_weth_dai_lp.json  usdc.json  usdt.json
cfmms/: Cargo.toml
cfmms/src/: dex.rs  errors.rs  lib.rs  pool.rs
cfmms/src/batch_requests/uniswap_v2/: mod.rs
cfmms/src/batch_requests/uniswap_v3/: mod.rs
collectors/: Cargo.toml
collectors/src/: block_collector.rs  lib.rs  mempool_collector.rs  slot_finder.rs  state_diff.rs  types.rs
fork-database/: Cargo.toml
fork-database/src/: backend_handler.rs  blockchain_db.rs  errors.rs  forked_db.rs  lib.rs  shared_backend.rs  utils.rs
fork-database/src/cache_data/: storage.json
qilin/: Cargo.toml
qilin/src/: abigen.rs  init.rs  lib.rs  main.rs  mod.rs
qilin/src/assets/: all_pools_hashed.json
qilin/src/utils/: constants.rs  helpers.rs  serialization.rs
src/: EthMarket.rs  UniswappyV2EthPair.rs  abi.rs  abigen.rs  addresses.rs  arbitrage.rs  constants.rs  coordinator.rs  index.rs  init.rs  lib.rs  main.rs  utils.rs
src/assets/: all_pools.json  all_pools_hashed.json  block_trace_and_account_diff.txt  block_transaction.txt
src/batch_requests/uniswap_v2/: mod.rs
src/batch_requests/uniswap_v3/: mod.rs
src/bindings/: dai.rs  mod.rs  swap_router.rs  uniswap_universal_router.rs  uniswap_v2_router_1.rs  uniswap_v3_router_1.rs  uniswap_v3_router_2.rs  uniswap_v3_weth_dai_lp.rs  usdc.rs  usdt.rs  weth.rs
src/cfmm/: dex.rs  mod.rs  pool.rs
src/collectors/: block_collector.rs  mempool_collector.rs  mod.rs  state_diff.rs
src/errors/: errors.rs
src/fork_database/: backend_handler.rs  blockchain_db.rs  mod.rs  shared_backend.rs  snapshot.rs
src/pools/: pool.rs
src/state_manager/: block_processor.rs  mod.rs  slot_finder.rs  state_diff.rs
src/uni_math/: mod.rs
src/uni_math/v2/: swap.rs
src/uni_math/v3/: bit_math.rs  error.rs  fixed_point_math.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap.rs  swap_step.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs  utils.rs
src/utils/: base_fee_helper.rs  constants.rs  digest_calldata.rs  gas_helper.rs  helpers.rs  mod.rs  relayer.rs  serialization.rs  slot_finder.rs  state_diff.rs  utils.rs
strategies/: Cargo.toml
strategies/src/: lib.rs  types.rs
strategies/src/arb/: mod.rs
strategies/src/arb/v2/: swap.rs
strategies/src/arb/v3/: errors.rs  mod.rs  swap.rs
strategies/src/sandwich/: mod.rs  state.rs
strategies/src/sandwich/abi/: mod.rs
strategies/src/sandwich/contracts/: foundry.toml
strategies/src/sandwich/contracts/cache/: solidity-files-cache.json
strategies/src/sandwich/contracts/interfaces/: IWETH.sol
strategies/src/sandwich/contracts/scripts/: Deploy.s.sol
strategies/src/sandwich/contracts/src/: BrainDance.sol  SandwichDeployer.sol  Sandwicher.sol
strategies/src/sandwich/contracts/src/test/: sandwicher.t.sol
strategies/src/sandwich/test_data/: all_pools.json
strategies/src/sandwich/utils/: constants.rs  contract_deployer.rs  contracts.rs  encode_packed.rs  mod.rs  state_diff.rs
strategies/src/sandwich/utils/tx_builder/braindance/: decode.rs  encode.rs
strategies/src/sandwich/utils/tx_builder/sandwich/: mod.rs  v2.rs  v3.rs
