[package]
name = "flashbots_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers-flashbots = "0.13.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.8"

# Error handling
thiserror = { version = "1.0.37", default-features = false }

# Serialization/deserialization
serde = "1"
serde_json = "1"
chrono = { version = "0.4.22", features = ["default", "serde"] }

# HTTP
url = { version = "2.3.1", default-features = false }
reqwest = { version = "0.11", default-features = false }

# Async
async-trait = { version = "0.1.58", default-features = false }
futures-util = "0.3"
futures-core = "0.3"
pin-project = "1"

# Ethers
ethers = { version = "2.0.4", features = ["ws"] }
ethers-signers = "2.0.4"
ethers-core = "2.0.4"
ethers-providers = { version = "1.0.2", features = ["ws"] }
ruint = "1.8.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
ethers = { version = "2.0.0", default-features = false }
eyre = "0.6.8"

[features]
default = ['openssl']
openssl = ['ethers/openssl', 'reqwest/default-tls']
rustls = ['ethers/rustls', 'reqwest/rustls-tls']
