[package]
name = "qilin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"qilin",
	"cfmms",
	"collectors",
	"strategies",
	"executors",
	"fork-database"
]

[workspace.dependencies]
ethers = { version = "2.0.7", features=["ws"] }
artemis = { git = "https://github.com/paradigmxyz/artemis.git", rev="dd9bec7", package = "artemis-core" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
hashbrown = "0.14.0"
thiserror = { version = "1.0.37", default-features = false }
url = { version = "2.3.1", default-features = false }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.4.0"
ethers-flashbots = { git = "https://github.com/da-bao-jian/ethers-flashbots", branch = "master"}
anyhow = "1.0.71"
clap = "4.3.0"
dotenv = "0.15.0"
parking_lot = "0.12.1"
eyre = "0.6.8"
serde_json = "1"
async-trait = { version = "0.1.58", default-features = false }
tokio-stream = "0.1.14"
futures = "0.3.28"
revm = "3.3.0"
cfmms = { git = "https://github.com/da-bao-jian/cfmms-rs", branch="main" }
rusty = { git = "https://github.com/da-bao-jian/rusty-sando", branch="master"}
tracing = "0.1.37"

[dependencies]

qilin_core = { path = "qilin" }
reqwest = { version = "0.11", default-features = false }
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
cargo-make = "0.3.54"
cargo-geiger = "0.11.6"
criterion = "0.5.1"
petgraph = "0.6.3"
cargo-watch = "8.4.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
ethers = { version = "2.0.0", default-features = false }

[features]
default = ['openssl']
openssl = ['ethers/openssl', 'reqwest/default-tls']
rustls = ['ethers/rustls', 'reqwest/rustls-tls']
