[package]
name = "fork-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true}
log = {workspace = true}
parking_lot = {workspace = true}
eyre = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}


hashbrown = { version = "0.13", features = ["serde"] }
foundry = "0.3.0"

revm = { version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee"
] }