[package]
name = "qilin_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
ethers-flashbots = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
artemis = { workspace = true }
tokio = { workspace = true }

hex = "0.4.3"

qilin_cfmms = { path = "../cfmms" }
collectors = { path = "../collectors" }
env_logger = "0.10.0"
