[package]
name = "strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.8.1"
ethers = { workspace = true }
cfmms = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

qilin_cfmms = { path = "../cfmms" }
uniswap_v3_math = "0.4.0"
